assets/dev/scss/editor/preview/preview.scss
/* ... */
.elementor-editor-element-edit {

	@media(min-width: $editor-screen-lg-min) {
		cursor: move;
	}
}

// Section & Container - Overlay Settings
.elementor-editor-section-settings,
.elementor-editor-container-settings {
	height: 24px;
	top: 1px;
	@include start(50%);
	transform: translateX(getValueByDirection(-50%, 50%)) translateY(-100%);
	background-color: var( --primary-color );
	border-radius: 5px 5px 0 0;
	box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.05);

	i.eicon-handle {
		font-size: 16px;
	}

	.elementor-editor-element-setting {

		&:hover {
			background-color: var( --secondary-color );
		}

		&:first-child {
			border-radius: getValueByDirection(5px 0 0 0, 0 5px 0 0);

			&:before {
				content: '';
				position: absolute;
				border: solid transparent;
				top: 2px;
				@include border-end-property(color, var( --primary-color ));
				border-width: getValueByDirection(22px 12px 0 0, 22px 0 0 12px);
				@include end(calc(100% - 1px));
			}

			&:hover {

				&:before {
					@include border-end-property(color, var( --secondary-color ));
				}
			}
		}

		&:last-child {
			border-radius: getValueByDirection(0 5px 0 0, 5px 0 0 0);

			&:after {
				content: '';
				position: absolute;
				border: solid transparent;
				top: 2px;
				@include border-start-property(color, var( --primary-color ));
				border-width: getValueByDirection(22px 0 0 12px, 22px 12px 0 0);
				@include start(calc(100% - 1px));
			}

			&:hover {

				&:after {
					@include border-start-property(color, var( --secondary-color ));
				}
			}
		}
	}
}

// Top Section / Container (Handles inside)
.e-handles-inside,
.elementor-section--handles-inside {

	> .elementor-element-overlay > .elementor-editor-element-settings {
		transform: translateX(-50%);
		border-radius: 0 0 5px 5px;

		.elementor-editor-element-setting {
			&:first-child {
				border-radius: getValueByDirection(0 0 0 5px, 0 0 5px 0);

				&:before {
					top: 0;
					border-width: getValueByDirection(0 12px 22px 0, 0 0 22px 12px);
				}
			}

			&:last-child {
				border-radius: getValueByDirection(0 0 5px 0, 0 0 0 5px);

				&:after {
					top: 0;
					border-width: getValueByDirection(0 0 22px 12px, 0 12px 22px 0);
				}
			}
		}
	}
}

// Column - Overlay Settings
.elementor-editor-column-settings {
	top: -1px;
	@include start(-1px);
	border-radius: getValueByDirection(0 0 3px 0, 0 0 0 3px);
	overflow: hidden;

	.elementor-editor-element-setting {
		background-color: $editor-darkest;

		&:not(:hover) {
			background-image: linear-gradient(to bottom, $editor-dark, $editor-darker);
		}
	}
}

// Widget - Overlay Settings
.elementor-editor-widget-settings {
	z-index: $second-layer;
	top: -1px;
	@include end(-1px);
	flex-direction: row-reverse;
	border-radius: getValueByDirection(0 0 0 3px, 0 0 3px 0);
	overflow: hidden;

	.elementor-editor-element-setting {
		background-color: darken($editor-info, 20%);

		&:not(:hover) {
			background-image: linear-gradient(to top, darken($editor-info, 10%), $editor-info);
		}
	}
}

.elementor-empty-view {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	z-index: $first-layer;
}

.elementor-first-add {
	text-align: center;
	border: 1px dashed $editor-lightest;
	display: flex;
	height: 100%;
	width: 100%;
	position: absolute;
	align-items: center;
	justify-content: center;

	.elementor-icon {
		font-size: 19px;
		color: $editor-light;
		cursor: pointer;
	}
}

.elementor-sortable-helper {
	position: absolute;
	border-radius: 3px;
	background-color: #fff;
	text-align: center;
	color: $editor-darker;
	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
	cursor: move;

	.icon {
		font-size: 28px;
		padding-top: 15px;
		line-height: 1;
	}

	.elementor-element-title-wrapper {
		display: table;
		width: 100%;
	}

	.title {
		font-size: 11px;
		font-family: Arial, Helvetica, sans-serif;
		font-weight: normal;
		font-style: normal;
		display: table-cell;
		vertical-align: middle;
		height: 40px;
	}
}

//Content Only (writing mode)
.elementor-editor-content-only {
	//Empty Section
	.elementor-first-add {
		display: none;
	}

	// Section
	.elementor-section {

		> .elementor-element-overlay {
			display: none;

			&:after {
				display: none;
			}
		}

		&:hover,
		&.elementor-element-editable {

			> .elementor-element-overlay {

				&:after {
					display: none;
				}
			}
		}
	}

	// Column
	.elementor-column {

		> .elementor-element-overlay {
			display: none;

			&:after {
				display: none;
			}
		}

		&:hover,
		&.elementor-element-editable {

			> .elementor-element-overlay {

				&:after {
					display: none;
				}
			}
		}
	}

	.elementor-editor-element-edit {

		@media(min-width: $editor-screen-lg-min) {
			cursor: pointer;
		}
	}
}

// Drag/sort placeholder
.elementor-sortable-placeholder {

	&:not(.elementor-column-placeholder) {
		background-color: $editor-info;
		animation-duration: 250ms;
		opacity: .9;
		width: 100%;
		align-self: stretch;

		// Make the placeholder centered in container element, like in other places.
		.e-container .elementor-first-add & {
			align-self: center;
		}

		// Hide the placeholder, since swappable containers don't need one.
		.e-swappable--active > & {
			display: none;
		}
	}
}

.elementor-section-placeholder {
	height: $section-placeholder-size;
	animation-name: placeholder-section;
}

.elementor-column-placeholder {
	position: relative;

	&:before, &:after {
		content: '';
		position: absolute;
		top: 10px;
		bottom: 10px;
		right: 10px;
		left: 10px;
	}

	&:before {
		border: 1px solid $editor-dark;
	}

	&:after {
		border: 1px dashed #fff;
	}
}

.elementor-widget-placeholder {
	height: $widget-placeholder-size;
	animation-name: placeholder-widget;
}
/* ... */

